Fixed vertical alignment for all buttons

--- a/front_end/src/components/components-css/load.css
+++ b/front_end/src/components/components-css/load.css
@@ -1,5 +1,6 @@
 .load-button {
   color: white;
+  padding-bottom: 13px;
   background-color: #4d4e4f;
   font-family: 'Neucha', cursive;
   font-size: 80%;
