--- a/front_end/src/components/components-css/registration-form.css
+++ b/front_end/src/components/components-css/registration-form.css
@@ -14,6 +14,7 @@
   box-shadow: 0 3px 4px gray;
   border-radius: 8px;
   padding-top: .5%;
+  padding-bottom: 4px;
 }
 
 @media only screen and (max-width: 600px) {
@@ -21,5 +22,6 @@
     height: 48px;
     width: 48px;
     margin-top: 20px;
-  }
+    padding-bottom: 0px;
+  
 }
