--- a/front_end/src/components/components-css/save.css
+++ b/front_end/src/components/components-css/save.css
@@ -16,4 +16,5 @@
   position: fixed;
   bottom: 1%;
   right: 23%;
+  padding-bottom: 13px;
 }
